; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/media-playback/media-playback/extr_media.c_convert_pixel_format.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/media-playback/media-playback/extr_media.c_convert_pixel_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VIDEO_FORMAT_NONE = common dso_local global i32 0, align 4
@VIDEO_FORMAT_I420 = common dso_local global i32 0, align 4
@VIDEO_FORMAT_NV12 = common dso_local global i32 0, align 4
@VIDEO_FORMAT_YUY2 = common dso_local global i32 0, align 4
@VIDEO_FORMAT_I444 = common dso_local global i32 0, align 4
@VIDEO_FORMAT_UYVY = common dso_local global i32 0, align 4
@VIDEO_FORMAT_RGBA = common dso_local global i32 0, align 4
@VIDEO_FORMAT_BGRA = common dso_local global i32 0, align 4
@VIDEO_FORMAT_BGRX = common dso_local global i32 0, align 4
@VIDEO_FORMAT_I40A = common dso_local global i32 0, align 4
@VIDEO_FORMAT_I42A = common dso_local global i32 0, align 4
@VIDEO_FORMAT_YUVA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @convert_pixel_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @convert_pixel_format(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %29 [
    i32 137, label %5
    i32 133, label %7
    i32 136, label %9
    i32 128, label %11
    i32 132, label %13
    i32 134, label %15
    i32 135, label %17
    i32 138, label %19
    i32 139, label %21
    i32 131, label %23
    i32 130, label %25
    i32 129, label %27
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @VIDEO_FORMAT_NONE, align 4
  store i32 %6, i32* %2, align 4
  br label %32

7:                                                ; preds = %1
  %8 = load i32, i32* @VIDEO_FORMAT_I420, align 4
  store i32 %8, i32* %2, align 4
  br label %32

9:                                                ; preds = %1
  %10 = load i32, i32* @VIDEO_FORMAT_NV12, align 4
  store i32 %10, i32* %2, align 4
  br label %32

11:                                               ; preds = %1
  %12 = load i32, i32* @VIDEO_FORMAT_YUY2, align 4
  store i32 %12, i32* %2, align 4
  br label %32

13:                                               ; preds = %1
  %14 = load i32, i32* @VIDEO_FORMAT_I444, align 4
  store i32 %14, i32* %2, align 4
  br label %32

15:                                               ; preds = %1
  %16 = load i32, i32* @VIDEO_FORMAT_UYVY, align 4
  store i32 %16, i32* %2, align 4
  br label %32

17:                                               ; preds = %1
  %18 = load i32, i32* @VIDEO_FORMAT_RGBA, align 4
  store i32 %18, i32* %2, align 4
  br label %32

19:                                               ; preds = %1
  %20 = load i32, i32* @VIDEO_FORMAT_BGRA, align 4
  store i32 %20, i32* %2, align 4
  br label %32

21:                                               ; preds = %1
  %22 = load i32, i32* @VIDEO_FORMAT_BGRX, align 4
  store i32 %22, i32* %2, align 4
  br label %32

23:                                               ; preds = %1
  %24 = load i32, i32* @VIDEO_FORMAT_I40A, align 4
  store i32 %24, i32* %2, align 4
  br label %32

25:                                               ; preds = %1
  %26 = load i32, i32* @VIDEO_FORMAT_I42A, align 4
  store i32 %26, i32* %2, align 4
  br label %32

27:                                               ; preds = %1
  %28 = load i32, i32* @VIDEO_FORMAT_YUVA, align 4
  store i32 %28, i32* %2, align 4
  br label %32

29:                                               ; preds = %1
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* @VIDEO_FORMAT_NONE, align 4
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %30, %27, %25, %23, %21, %19, %17, %15, %13, %11, %9, %7, %5
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
